removed duplicate lines.
